--- a/00_install_quobyte_server.yaml
+++ b/00_install_quobyte_server.yaml
@@ -4,6 +4,7 @@
     - vars/ansible-vars
   become: yes
   vars: 
+    # You can set explicit Quobyte versions here, for example to do a rollback
     #quobyte_version: =2:3.0~pre8.1
     #quobyte_version: =2:3.0~pre9-1
     #quobyte_version: =2:3.0~pre9.1-1
