--- a/03_add_metadataservices.yaml
+++ b/03_add_metadataservices.yaml
@@ -54,7 +54,7 @@
   become: yes
   tasks:
 
-    - name: get Quobyte session 
+    - name: Get Quobyte session 
       shell:
         cmd: qmgmt -u {{ api_service }} user login {{ admin_user }} {{ admin_password }} 
 
