--- a/04_add_dataservices.yaml
+++ b/04_add_dataservices.yaml
@@ -23,7 +23,7 @@
       pause:
         seconds: 60 
 
-    - name: get Quobyte session 
+    - name: Get Quobyte session 
       shell:
         cmd: qmgmt -u {{ api_service }} user login {{ admin_user }} {{ admin_password }} 
 
