--- a/07_optional_license_cluster.yaml
+++ b/07_optional_license_cluster.yaml
@@ -4,7 +4,7 @@
   become: yes
   tasks:
 
-    - name: get Quobyte session 
+    - name: Get Quobyte session 
       shell:
         cmd: qmgmt -u {{ api_service }} user login {{ admin_user }} {{admin_password }} 
 
