--- a/10_optional_use_qns_for_s3_eval.yaml
+++ b/10_optional_use_qns_for_s3_eval.yaml
@@ -3,15 +3,15 @@
     - vars/ansible-vars
   become: yes
   tasks:
-    - name: get Quobyte session 
+    - name: Get Quobyte session 
       shell:
         cmd: qmgmt -u {{ api_service }} user login {{ admin_user }} {{ admin_password }} 
 
-    - name: export systemconfig 
+    - name: Export systemconfig 
       shell:
         cmd: qmgmt -u {{ api_service }} systemconfig export /tmp/systemconfig
 
-    - name: add qns section to systemconfig
+    - name: Add qns section to systemconfig
       blockinfile:
         path: /tmp/systemconfig
         block: |
@@ -20,7 +20,7 @@
             secret: "{{ qns_secret }}"
           }
 
-    - name: import systemconfig 
+    - name: Import systemconfig 
       shell:
         cmd: qmgmt -u {{ api_service }} systemconfig import /tmp/systemconfig
 
@@ -29,7 +29,7 @@
     - vars/ansible-vars
   become: yes
   tasks:
-    - name: restart Quobyte registries 
+    - name: Restart Quobyte registries 
       service:
         state: restarted
         name: "{{ item }}"
@@ -41,7 +41,7 @@
   vars_files:
     - vars/ansible-vars
   tasks:
-    - name: get public ip 
+    - name: Get public ip 
       uri:
         url: http://ip.syseleven.de
         return_content: yes
@@ -64,7 +64,7 @@
         state: present
         line: "{{ public_ip }}"
 
-    - name: restart Quobyte S3 proxy
+    - name: Restart Quobyte S3 proxy
       service:
         state: restarted
         name: "{{ item }}"
