--- a/11_optional_add_tenant_and_volume.yaml
+++ b/11_optional_add_tenant_and_volume.yaml
@@ -6,7 +6,7 @@
     - my_volume: "myvolume-2"
   become: yes
   tasks:
-    - name: get Quobyte session 
+    - name: Get Quobyte session 
       shell:
         cmd: qmgmt -u {{ api_service }} user login {{ admin_user }} {{ admin_password }} 
 
