--- a/12_optional_add_default_policies.yaml
+++ b/12_optional_add_default_policies.yaml
@@ -6,7 +6,7 @@
     - my_policy_name: "ssd"
   become: yes
   tasks:
-    - name: get Quobyte session 
+    - name: Get Quobyte session 
       shell:
         cmd: qmgmt -u {{ api_service }} user login {{ admin_user }} {{ admin_password }} 
 
