--- a/helper/0x_wipe_cluster.yaml
+++ b/helper/0x_wipe_cluster.yaml
@@ -1,6 +1,20 @@
 - hosts: quobyteservers
   become: yes
   tasks:
+
+    - set_fact: 
+        package_url: https://packages.quobyte.com/repo/3/{{ repo_id }}
+      when: repo_id is defined 
+
+    - set_fact: 
+        package_url: https://packages.quobyte.com/repo/v3 
+      when: repo_id is not defined 
+
+    - set_fact: 
+        rpm_distribution_string: RHEL 
+        ##when: ansible_distribution is regex('^RedHat*') 
+      when: ansible_facts['os_family'] == "RedHat"
+
     - name: stop Quobyte data consuming services  
       ignore_errors: yes
       service:
