--- a/03_add_metadataservices.yaml
+++ b/03_add_metadataservices.yaml
@@ -59,5 +59,5 @@
       register: metadata_device_state
       retries: 12
       delay: 10
-      until: metadata_device_state.stdout == metadata_device_count 
+      until: metadata_device_state.stdout >= metadata_device_count 
 
