--- a/inventory.yaml
+++ b/inventory.yaml
@@ -1,52 +1,64 @@
+## Use this inventory to layout a plan for your storage cluster.
 all:
   vars: 
     ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
   children: 
+   # all storage cluster members. Used to add repositories, installl quobyte-server etc.
    quobyteservers:
     hosts:
-      10.164.0.40:
-      10.164.0.20:
-      10.164.0.19:
-      10.164.0.56:
+      example-host-a.com:
+      example-host-b.com:
+      example-host-c.com:
+      example-host-d.com:
+      example-host-e.com:
+   # On which hosts shall the webconsole be running?
    webconsoleservices:
     hosts:
-      10.164.0.40:
-      10.164.0.20:
-      10.164.0.19:
+      example-host-a.com:
+      example-host-b.com:
+      example-host-c.com:
+   # On which hosts shall the REST-API be running?
    apiservices:
     hosts:
-      10.164.0.40:
-      10.164.0.20:
-      10.164.0.19:
+      example-host-a.com:
+      example-host-b.com:
+      example-host-c.com:
+   # On which hosts shall the registry service be running?
    registryservices:
     hosts:
-      10.164.0.40:
-      10.164.0.20:
-      10.164.0.19:
+      example-host-a.com:
+      example-host-b.com:
+      example-host-c.com:
+   # On which hosts shall the metadata service be running?
    metadataservices:
     hosts:
-      10.164.0.40:
-      10.164.0.20:
-      10.164.0.19:
+      example-host-a.com:
+      example-host-b.com:
+      example-host-c.com:
+   # On which hosts shall the data service be running?
    dataservices:
     hosts:
-      10.164.0.40:
-      10.164.0.20:
-      10.164.0.19:
-      10.164.0.56:
+      example-host-a.com:
+      example-host-b.com:
+      example-host-c.com:
+      example-host-d.com:
+      example-host-e.com:
+   # On which hosts shall the object storage proxy be running?
    s3services:
     hosts:
-      10.164.0.40:
-      10.164.0.20:
-      10.164.0.19:
+      example-host-a.com:
+      example-host-b.com:
+      example-host-c.com:
+   # On which hosts shall the NFS proxy be running?
    nfsservices:
     hosts:
-      10.164.0.40:
-      10.164.0.20:
-      10.164.0.19:
+      example-host-a.com:
 
-
+   # On which hosts shall the client be installed?
+   # This will install the client auto-mounter that 
+   # mounts all available volumes.
    clients: 
     hosts:
-      10.164.0.4:
+      example-host-f.com:
+      
 
