--- a/13_optional_add_nfsservices.yaml
+++ b/13_optional_add_nfsservices.yaml
@@ -4,6 +4,41 @@
   become: yes
   tasks:
 
+    - set_fact: 
+        package_url: https://packages.quobyte.com/repo/3/{{ repo_id }}
+      when: repo_id is defined 
+
+    - set_fact: 
+        package_url: https://packages.quobyte.com/repo/v3 
+      when: repo_id is not defined 
+
+    - set_fact: 
+        rpm_distribution_string: RHEL 
+      when: ansible_distribution is regex('^RedHat*') 
+
+    - set_fact: 
+        rpm_distribution_string: "{{ ansible_distribution }}"
+      when: ansible_distribution is regex('^CentOS*') 
+
+    - name: Make sure Quobyte repository signing key exists
+      apt_key:
+        url: https://packages.quobyte.com/repo/v3/apt/pubkey.gpg 
+        state: present
+      when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+    - name: Make sure Quobyte deb package repository exists 
+      apt_repository:
+        repo: "deb {{ package_url }}/apt {{ ansible_distribution_release }} main"
+        state: present
+      when: ansible_facts['os_family'] == "Debian"
+
+    - name: Make sure Quobyte rpm package repository exists 
+      yum_repository:
+        name: quobyte
+        description: Quobyte rpm repo
+        baseurl: "{{ package_url }}/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}"
+        gpgkey: https://packages.quobyte.com/repo/v3/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}/repodata/repomd.xml.key
+      when: ansible_facts['os_family'] == "RedHat"
+
     - name: Install Debian packages
       apt:
         name: "{{ packages }}"
@@ -24,6 +59,11 @@
         packages:
         - quobyte-nfs
       when: ansible_facts['os_family'] == "RedHat"
+
+    - name: Ensure Registry configuration is set
+      template:
+        src: templates/host.cfg.jinja2
+        dest: "/etc/quobyte/host.cfg"
 
     - name: Enable Quobyte NFS proxy
       service:
