add vars file to registry section

--- a/01_setup_coreservices.yaml
+++ b/01_setup_coreservices.yaml
@@ -5,6 +5,13 @@
   become: yes
   tasks:
 
+    - name: Check for trusted service networks
+      lineinfile:
+        path: /etc/quobyte/registry.cfg
+        state: present
+        line: "rpc.service_networks={{ trusted_service_networks }}"
+      when: 'trusted_service_networks is defined'
+
     - name: Create registry data directory
       file:
         path: /var/lib/quobyte/devices/registry-data
@@ -16,13 +23,6 @@
         cmd: /usr/bin/qbootstrap -y -d /var/lib/quobyte/devices/registry-data 
         creates: /var/lib/quobyte/devices/registry-data/QUOBYTE_DEV_SETUP
 
-    - name: Check for trusted service networks
-      lineinfile:
-        path: /etc/quobyte/registry.cfg
-        state: present
-        line: "rpc.service_networks={{ trusted_service_networks }}"
-      when: 'trusted_service_networks is defined'
-
     - name: Enable Quobyte core services 
       service:
         enabled: yes
@@ -31,13 +31,12 @@
       with_items: 
          - quobyte-registry
 
-- hosts: apiservices[0]
+- hosts: apiservices
   vars_files:
     - vars/ansible-vars
   become: yes
   tasks:
-
-    - name: Enable first API service
+    - name: Enable Quobyte core services 
       service:
         enabled: yes
         state: started
@@ -54,6 +53,12 @@
       wait_for:
         port: 7875 
         delay: 2
+
+- hosts: apiservices[0]
+  vars_files:
+    - vars/ansible-vars
+  become: yes
+  tasks:
 
     - name: Get Quobyte session 
       shell:
@@ -120,6 +125,8 @@
 
 - hosts: registryservices[0]
   become: yes
+  vars_files:
+    - vars/ansible-vars
   tasks:
     - name: Restart Quobyte registry services 
       service:
@@ -128,6 +135,8 @@
 
 - hosts: registryservices[1:]
   become: yes
+  vars_files:
+    - vars/ansible-vars
   tasks:
     - name: Check for trusted service networks
       lineinfile:
@@ -161,18 +170,9 @@
       with_items: 
          - quobyte-registry
 
-- hosts: apiservices
-  become: yes
-  tasks:
-    - name: Enable Quobyte core services 
-      service:
-        enabled: yes
-        state: started
-        name: "{{ item }}"
-      with_items: 
-         - quobyte-api
-
 - hosts: webconsoleservices
+  vars_files:
+    - vars/ansible-vars
   become: yes
   tasks:
     - name: Enable Quobyte core services 
