--- a/helper/15_update_if_green.yaml
+++ b/helper/15_update_if_green.yaml
@@ -3,6 +3,13 @@
   vars_files:
     - ../vars/ansible-vars
   become: yes
+  vars: 
+    # You can set explicit Quobyte versions here, for example to do a rollback
+    #quobyte_version: =2:3.0~pre8.1
+    #quobyte_version: =2:3.0~pre9-1
+    #quobyte_version: =2:3.0~pre9.1-1
+    quobyte_version: "-3.0~pre11-2.1" 
+
   tasks:
     - name: Get Quobyte session 
       shell:
@@ -36,21 +43,21 @@
     - name: Install Debian packages
       apt:
         name: "{{ packages }}"
-        state: latest 
+        state: present
         update_cache: yes
       vars:
         packages:
-        - quobyte-server
+        - quobyte-server{{ quobyte_version }}
       when: ansible_facts['os_family'] == "Debian" and "'HEALTHY' in systemhealth_test.stdout" 
 
     - name: Install RPM packages
       yum: 
         update_cache: yes
         allow_downgrade: yes
-        state: latest 
+        state: present 
         name: "{{ packages }}"
       vars:
         packages:
-        - quobyte-server
+        - quobyte-server{{ quobyte_version }}
       when: ansible_facts['os_family'] == "RedHat" and "'HEALTHY' in systemhealth_test.stdout"
 
