--- a/helper/19_udpate_systemconfig.yaml
+++ b/helper/19_udpate_systemconfig.yaml
@@ -2,42 +2,41 @@
   vars_files:
     - ../vars/ansible-vars
   vars:
-          - cluster_name: "Enjoy Storage"
+    - cluster_name: "Enjoy Distributed Storage"
+    - healthmanager_enabled: true
   become: yes
   tasks:
-    - name: Create API json payload
-      blockinfile:
-        path: /tmp/getconfig
-        create: true
-        marker: ""
-        block: |
-          {
-          "id": "text",
-          "jsonrpc": "2.0",
-          "method": "getConfiguration",
-          "params": {
-            "configuration_type": "SYSTEM_CONFIGURATION",
-            "retry": "INFINITELY"
-            }
-          }
- 
-    - name: Dump systemconfig to json file
-      shell:
-        cmd:  curl -s -u {{admin_user}}:{{admin_password}} http://{{api_service}}:7860 -d @/tmp/getconfig > /tmp/systemconfig.json
-      
-    - name: Load systemconfig from dump file to Ansible variable
-      include_vars:
-        file: /tmp/systemconfig.json
-        name: systemconfig_dump
+
+    - name: Dump cluster config to variable 
+      uri:
+        url: "http://{{api_service}}:7860"
+        user: "{{admin_user}}"
+        password: "{{admin_password}}"
+        force_basic_auth: yes
+        method: POST
+        body_format: json
+        body: "{ \"id\": \"text\",\"jsonrpc\": \"2.0\", \"method\": \"getConfiguration\", \"params\": { \"configuration_type\": \"SYSTEM_CONFIGURATION\", \"retry\": \"INFINITELY\" } }"
+        return_content: yes
+      register: systemconfig_dump_raw 
+
+    - name: Get systemconfig 
+      set_fact: 
+        systemconfig: "{{ systemconfig_dump_raw.json.result.system_configuration }}"
+
+    - debug:
+            var: systemconfig
 
     - name: Create new systemconfig
       set_fact:
-        systemconfig_var: "{{ systemconfig_var | default([]) | combine({ 'method': 'setConfiguration', 'id': 'text', 'jsonrpc': '2.0', 'params': {'configuration_type': 'SYSTEM_CONFIGURATION', 'system_configuration': '{{ systemconfig_dump.result.system_configuration }}' } }) }}"
+        systemconfig_var: "{{ systemconfig_var | default([]) | combine({ 'method': 'setConfiguration', 'id': 'text', 'jsonrpc': '2.0', 'params': {'configuration_type': 'SYSTEM_CONFIGURATION', 'system_configuration': '{{ systemconfig }}' } }) }}"
 
     - name: Set some variable 
       set_fact:
-        #systemconfig_var: "{{ systemconfig_var|combine({'params': {'system_configuration': {'health_manager_config': {'enable': false}}}}, recursive=True) }}"
-        systemconfig_var: "{{ systemconfig_var|combine({'params': {'system_configuration': {'cluster_configuration': {'cluster_name': '{{ cluster_name }}'}}}}, recursive=True) }}"
+        systemconfig_var: "{{ systemconfig_var|combine({'params': {'system_configuration': {'cluster_configuration': {'cluster_name': 'Enjoy Distributed storage'}}}}, recursive=True) }}"
+
+    - name: Set some other variable 
+      set_fact:
+        systemconfig_var: "{{ systemconfig_var|combine({'params': {'system_configuration': {'health_manager_config': {'enable': false }}}}, recursive=True) }}"
 
     - name: Write systemconfig to file
       copy:
@@ -47,6 +46,7 @@
     - name: Load systemconfig from json file
       shell:
         cmd:  curl -s -u {{admin_user}}:{{admin_password}} http://{{api_service}}:7860 -d @/tmp/systemconfig.json
+        #cmd:  curl -s -u {{admin_user}}:{{admin_password}} http://{{api_service}}:7860 -d "{{ systemconfig_var }}"
       
     - name: Remove systemconfig dump
       file:
