Add additional programs to SUSE section

--- a/00_install_quobyte_server.yaml
+++ b/00_install_quobyte_server.yaml
@@ -97,6 +97,8 @@
         - java-11-openjdk 
         - quobyte-server
         - xfsprogs
+        - tuned
+        - chrony
       when: ansible_facts['os_family'] == "Suse"
 
 
