--- a/06_optional_install_defaultclient.yaml
+++ b/06_optional_install_defaultclient.yaml
@@ -21,6 +21,11 @@
         rpm_distribution_string: "{{ ansible_distribution }}"
       when: ansible_distribution is regex('^CentOS*') 
 
+    - set_fact: 
+        rpm_distribution_string: "SLE"
+      when: ansible_distribution is regex('SLES') 
+
+
     - name: Add Quobyte repository signing key
       apt_key:
         url: https://packages.quobyte.com/repo/v3/apt/pubkey.gpg 
@@ -40,6 +45,15 @@
         baseurl: "{{ package_url }}/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}"
         gpgkey: https://packages.quobyte.com/repo/v3/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}/repodata/repomd.xml.key
       when: ansible_facts['os_family'] == "RedHat"
+
+    - name: Add Quobyte Zypper repository to sources list
+      zypper_repository:
+        name: quobyte
+        description: Quobyte rpm repo
+        repo: "{{ package_url }}/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}"
+        auto_import_keys: yes
+      when: ansible_facts['os_family'] == "Suse"
+
 
     - name: Install Debian packages
       apt:
@@ -61,6 +75,24 @@
         packages:
         - quobyte-client
       when: ansible_facts['os_family'] == "RedHat"
+
+    - name: Install RPM packages on Suse Linux 
+      zypper: 
+        update_cache: yes
+        oldpackage: yes
+        state: present
+        name: "{{ packages }}"
+      vars:
+        packages:
+        - quobyte-client
+      when: ansible_facts['os_family'] == "Suse"
+
+#    - name: Create /etc/quobyte 
+#      file:
+#        path: /etc/quobyte
+#        state: directory
+#        group: root
+#        owner: root
 
     - name: Write /etc/quobyte/client-service.cfg
       template:
