--- a/00_install_quobyte_server.yaml
+++ b/00_install_quobyte_server.yaml
@@ -21,6 +21,10 @@
       when: repo_id is not defined 
 
     - set_fact: 
+        package_url: "{{ dedicated_mirror }}"
+      when: dedicated_mirror is defined 
+
+    - set_fact: 
         rpm_distribution_string: RHEL 
       when: ansible_distribution is regex('^RedHat*') 
 
@@ -31,7 +35,6 @@
     - set_fact: 
         rpm_distribution_string: "SLE"
       when: ansible_distribution is regex('SLES') 
-
 
     - name: Add Quobyte repository signing key
       apt_key:
