--- a/00_install_quobyte_server.yaml
+++ b/00_install_quobyte_server.yaml
@@ -17,12 +17,8 @@
       when: repo_id is defined 
 
     - set_fact: 
-        package_url: https://packages.quobyte.com/repo/v3 
+        package_url: https://packages.quobyte.com/repo/current
       when: repo_id is not defined 
-
-    - set_fact: 
-        package_url: "{{ dedicated_mirror }}"
-      when: dedicated_mirror is defined 
 
     - set_fact: 
         rpm_distribution_string: RHEL 
@@ -38,13 +34,13 @@
 
     - name: Add Quobyte repository signing key
       apt_key:
-        url: https://packages.quobyte.com/repo/v3/apt/pubkey.gpg 
+        url: "{{ dedicated_mirror | default(package_url) }}/apt/pubkey.gpg"
         state: present
       when: ansible_facts['os_family'] == "Debian"
 
     - name: Add Quobyte apt repository to sources list
       apt_repository:
-        repo: "deb {{ package_url }}/apt {{ ansible_distribution_release }} main"
+        repo: "deb {{ dedicated_mirror | default(package_url) }}/apt {{ ansible_distribution_release }} main"
         state: present
       when: ansible_facts['os_family'] == "Debian"
 
@@ -52,8 +48,8 @@
       yum_repository:
         name: quobyte
         description: Quobyte rpm repo
-        baseurl: "{{ package_url }}/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}"
-        gpgkey: https://packages.quobyte.com/repo/v3/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}/repodata/repomd.xml.key
+        baseurl: "{{ dedicated_mirror | default(package_url) }}/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}"
+        gpgkey: "{{ dedicated_mirror | default(package_url) }}/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}/repodata/repomd.xml.key"
         gpgcheck: "{{ check_package_signature | default('yes', true) }}"
       when: ansible_facts['os_family'] == "RedHat"
 
@@ -61,7 +57,7 @@
       zypper_repository:
         name: quobyte
         description: Quobyte rpm repo
-        repo: "{{ package_url }}/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}"
+        repo: "{{ dedicated_mirror | default(package_url) }}/rpm/{{ rpm_distribution_string }}_{{ ansible_distribution_major_version }}"
         auto_import_keys: yes
         disable_gpg_check: "{{ check_packages_signature | default('no', false) }}"
       when: ansible_facts['os_family'] == "Suse"
